* 2013-10-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 24642: Resolve participant information for shared calendar folders as needed
 - Fix for bug 29372: Ensure that "all"-host-wildcards from 'as-config.yml' are applied first
 
* 2013-10-28 - jan.bauerdick@open-xchange.com

 - Fix for bug 29495: Swapped warnings

* 2013-10-28 - thorben.betten@open-xchange.com

 - Fix for bug 28886: Removed obsolete GMX crawler identifiers/specs from 'crawler.properties' file
 - Fix for bug 29509: Fixed typo in i18n string
 - Fix for bug 29512: File folder publication offers latest version of a listed file
 - Fix for bug 29498: Check for regal RFC 822 E-Mail address prior to applying preparations for MSISDN addresses
 - Fix for bug 29113: Prefer MIME type by file name if signaled one differs from file extension

* 2013-10-27 - thorben.betten@open-xchange.com

 - Fix for bug 29274: Create user-individual publication folders for published E-Mail attachments that exceed user quota

* 2013-10-25 - thorben.betten@open-xchange.com

 - Fix for bug 29484: Copy binary stream to support repetitive access to data if mail needs to be processed (e.g. "special" Apple Mailer structure)

* 2013-10-24 - steffen.templin@open-xchange.com

 - Fix for Bug 29437: Don't try to write JSON string if the underlying file is empty

* 2013-10-24 - thorben.betten@open-xchange.com

 - Fix for bug 29229: No excessive HTML-escaping when inserting HTML attribute values
 - Fix for bug 29429: Use Java's naming for charset "cp932" that is "MS932"
 - Fix for bug 29469: Use translatable name for Unified Mail's root folder
 - Fix for bug 29350: Check for global address book with respect to user configuration

* 2013-10-24 - martin.herfurth@open-xchange.com

 - Fix for bug 29339: Conflicts for multiday appointments.
 - Fix for bug 29459: TimeZone Component has to be first Element for Outlook (Mac Version).

* 2013-10-23 - thorben.betten@open-xchange.com
